# agent-boom

./: LICENSE  README.md  main.py  pyproject.toml
agent-course-hf/: README.md  Unit2-Frameworks-For-AI-Agents.md
agent-course-hf/agentic-rag/: tool.py
mcp-learn/: README.md  cline-config.json  models.list
mcp-learn/server/: get_date.py  secret_fruits.py
